...
        android:text="Email:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/EmailText"
        android:ems="10"
        android:inputType="textEmailAddress"
...
        android:text="Password:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/PasswordText"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/EnterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/loginPassword"
        android:layout_marginTop="30dp"
        android:text="Login" />
...
